Fixed double scrollbar
Pseudo element caused document overflow in html. overflow-x hidden made it have a double scrollbar for some users.

--- a/fem-managesite/style.css
+++ b/fem-managesite/style.css
@@ -590,13 +590,13 @@ input:where([type="text"], [type="email"]){
     content:'';
     position: absolute;
     z-index: -1;
-    left: 70%;
-    top: -50vh;
-    width: 60%;
+    right: 0%;
+    top: -40vh;
+    width: 80%;
     max-height: 70vh;
     aspect-ratio: 1 / 1.2;
     background-image: url(images/bg-tablet-pattern.svg);
-    background-position: bottom left;
+    background-position: 140px 50%;
     background-repeat: no-repeat;
     background-size: contain;
   }
